2010-10-29  Philippe Michel  <philippe.michel7@sfr.fr>

	* NEWS, dice.c, eval.c, gtkpanels.c, show.c: typos
	Picked from Debian and FreeBSD ports.

2010-10-17  Philippe Michel  <philippe.michel7@sfr.fr>

	* file.c: Fix in automatic import. Detect sgg now.

	* gtkfile.c: In the Open File panel, with supported files filters,
	show both lowercase and uppercase file extensions.

2010-09-27  Philippe Michel  <philippe.michel7@sfr.fr>

	* set.c: XGIDs with large cubes were not correctly decoded

Wed Jul 28 16:42:36 CEST 2010 Christian Anthon <anthon@kiku.dk>

	* set.c: checkers weren't swapped when reading XGIDs

Fri Jul 16 21:52:51 CEST 2010 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c: Allow rolling on both sides and start new game/match as
	appropriate

Fri Jul 16 18:12:30 CEST 2010 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c: fix redraw bug when navigating an unfinished move where
	dice are rolled.

Fri Jul 16 14:03:13 CEST 2010 Christian Anthon <anthon@kiku.dk>

	* render.c: fix clockwise display. Bar was reversed.

Mon Jul  5 20:00:46 CEST 2010 Christian Anthon <anthon@kiku.dk>

	* format.c: fix text output of rolled out cube analysis

Mon Jul  5 19:39:35 CEST 2010 Christian Anthon <anthon@kiku.dk>

	* play.c: remove TurnDone from CancelCubeAction. Fixes a batch analyse
	bug.

Fri Jun 25 16:00:08 CEST 2010 Christian Anthon <anthon@kiku.dk>

	* gtkfile.c: Show the discard dialog before batch analyse starts.

Fri Jun 25 10:49:12 CEST 2010 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, commands.inc, gnubg.c, gtkboard.c, set.c: support for
	xg ids - please test

Thu Jun 24 01:31:48 CEST 2010 Christian Anthon <anthon@kiku.dk>

	* analysis.c: don't refind move, when none made

Sun Jun 20 17:42:38 CEST 2010 Christian Anthon <anthon@kiku.dk>

	* analysis.c: refind made move after cmark_rollout

Sat Jun 19 09:22:16 CEST 2010 Christian Anthon <anthon@kiku.dk>

	* eval.c, import.c: Fix a counting error in the import match code. Ask